2006-06-19  Paolo Maggi  <paolo@gnome.org>

	* plugins/docinfo/gedit-docinfo-plugin.c
	(docinfo_dialog_response_cb) (update_ui_real): Disable the "Update"
	button when there is no open document

2006-06-18  Steve Frécinaux  <steve@istique.net>

	* gedit/dialogs/Makefile.am: add $(builddir) to INCLUDES (fix out of
	tree build)

2006-06-18  Paolo Maggi  <paolo@gnome.org>

	Reorganization of the Search menu
	
	* gedit/gedit-commands-search.c (_gedit_cmd_search_goto_line): focus
	the view
	(_gedit_cmd_search_interactive_search): new method

	* gedit/gedit-commands.h: new method 
	_gedit_cmd_search_interactive_search

	* gedit/gedit-ui.h: new action "SearchInteractiveSearch"

	* gedit/gedit-ui.xml: added "Interactive search..." menu item and
	some placeholder and separator to the Search menu

	* gedit/gedit-window.c (set_sensitivity_according_to_tab): set
	the sensitivity of the "SearchInteractiveSearch" action

2006-06-18  Paolo Maggi  <paolo@gnome.org>

	Fixed bug #344026 – Find - Replace

	* gedit/dialogs/gedit-search-dialog.c (show_replace): new function
	(gedit_search_dialog_class_init): register the new signal "show_replace"
	and bind Ctrl+H to it

	* gedit/dialogs/gedit-search-dialog.h: new signal "show_replace"

2006-06-18  Paolo Maggi  <paolo@gnome.org>

	* gedit/gedit-commands-help.c (_gedit_cmd_help_about): added
	Steve Frécinaux and Jesse van den Kieboom to authors. Welcome guys :)

2006-06-18  Paolo Maggi  <paolo@gnome.org>

	* gedit/gedit-utils.c (gedit_warning): set the window group and 
	removed gtk_dialog_run

2006-06-15  Steve Frecinaux  <steve@istique.net>

	* gedit/gedit-panel.c: (create_small_button):
	* gedit/gedit-notebook.c: (build_tab_label):

	Fix the fix of the fix of the cropped button issue (bug #318461) by
	using the same trick as Epiphany does.

2006-06-15  Steve Frécinaux  <steve@istique.net>

	Fix for bug #165568 – Support global lockdown keys (second part)

	* gedit/gedit-window.c: disable some menu entries according the current 