@@ -1,3 +1,15 @@
+2006-06-19  Jesse van den Kieboom  <jesse@ocecrew.nl>
+
+	* bindings/python/Makefile.am:
+	* bindings/python/geditcommands.defs:
+	* bindings/python/geditcommands.override:
+	
+	added new gedit.commands python module containing the
+	load_uri and load_uris functions
+	
+	* gedit/gedit-python-module.c: added initialising gedit.commands
+	python module
+	
 2006-06-19  Paolo Maggi  <paolo@gnome.org>
 
 	* plugins/docinfo/gedit-docinfo-plugin.c
